--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <p>Pulsa en los siguientes enlaces para ir a las siguientes páginas.</p>
     <div class="mienlace">
     <p><a href="http://es.wikipedia.org" target="_blank">
-       <img src="objetos/wikipedia.jpg" alt="Logo Wikipedia" border="0" height="200" />
+       <img src="assets/imgs/youtube.png" alt="Logo Wikipedia" border="0" height="200" />
     </a></p>
     <p><a href="http://es.wikipedia.org" target="_blank">Consultar Wikipedia</a></p>
     </div>
