--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
        a unos sitios muy populares.</p>
     <p>Pulsa en los siguientes enlaces para ir a las siguientes páginas.</p>
     <div class="mienlace">
-    <p><a href="https://poki.com/es?campaign=14722916619&adgroup=128255171980&extensionid=&targetid=kwd-19506465817&location=1000039&matchtype=e&network=g&device=c&devicemodel=&creative=547316786041&keyword=juegos%20friv&placement=&target=&gclid=CjwKCAiArY2fBhB9EiwAWqHK6tttzhEQn0bS61p03TpyV29x373bDVWdkbZtthHbM2MOxrRykAKY_BoCO7MQAvD_BwE" target="_blank">
-       <img src="assets/imgs/youtube.jpg" alt="Logo Wikipedia" border="0" height="200" />
+    <p><a href="https://www.youtube.com/watch?v=oG3GgR95ZRs" target="_blank">
+       <img src="assets/imgs/copapiston.jpeg" alt="Logo Wikipedia" border="0" height="200" />
     </a></p>
     <p><a href="http://es.wikipedia.org" target="_blank">Consultar Wikipedia</a></p>
     </div>
